tmg_kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tmg-ingress
  namespace: dev
  labels:
    name: tmg-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/backend"
        backend:
          service:
            name: tmg-app
            port: 
              number: 81
      - pathType: Prefix
        path: "/frontend"
        backend:
          service:
            name: tmg-app
            port: 
              number: 80
